--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@ if ('serviceWorker' in navigator) {
     integrity="sha384-jLuaxTTBR42U2qJ/pm4JRouHkEDHkVqH0T1nyQXn1mZ7Snycpf6Rl25VBNthU4z0" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="css/owl.theme.default.min.css" />
 <link rel="stylesheet" type="text/css" href="css/owl.carousel.css" />
-<link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" type="text/css" href="css/style-mob.css" />
+<link rel="stylesheet" href="style/style.css">
+<link rel="stylesheet" type="text/css" href="style/style-mob.css" />
 <link href="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css" rel="stylesheet" />
 
 <script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
