--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@ if ('serviceWorker' in navigator) {
     integrity="sha384-rf1bqOAj3+pw6NqYrtaE1/4Se2NBwkIfeYbsFdtiR6TQz0acWiwJbv1IM/Nt/ite" crossorigin="anonymous">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/fontawesome.css"
     integrity="sha384-jLuaxTTBR42U2qJ/pm4JRouHkEDHkVqH0T1nyQXn1mZ7Snycpf6Rl25VBNthU4z0" crossorigin="anonymous">
-<link rel="stylesheet" type="text/css" href="css/owl.theme.default.min.css" />
-<link rel="stylesheet" type="text/css" href="css/owl.carousel.css" />
+<link rel="stylesheet" type="text/css" href="style/owl.theme.default.min.css" />
+<link rel="stylesheet" type="text/css" href="style/owl.carousel.css" />
 <link rel="stylesheet" href="style/style.css">
 <link rel="stylesheet" type="text/css" href="style/style-mob.css" />
 <link href="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css" rel="stylesheet" />
