main page in progress

--- a/farm-razvitie/index.html
+++ b/farm-razvitie/index.html
@@ -6,7 +6,8 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Farm-Razvitie main page</title>
+    <meta name="description" content="На нашем сайте вы можете зарегистрировать медицинские препараты и газы. Внедряем правила GMP, Лицензии для производства медицинских препаратов и газы."/>
+    <title>Фарм-Развитие - регистрация медицинских препаратов и газов, GMP по всей России</title>
     <link href="fonts/FuturaPT-Light.ttf" rel="stylesheet">
     <link href="fonts/Romul.ttf" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/owl.theme.default.min.css" />
@@ -20,8 +21,8 @@
     <header>
         <div class="wrapper-content">
             <div class="header-top flex jc-between">
-                <a class="header-top__tel" href="tel:78003006269">8(800) 300-62-69 <br></a>
-                <a class="header-top__main" href="#">Farm Razvitie</a>
+                <a class="header-top__tel" href="tel:+78002017955">8(800) 201-79-55 <br><span class="header-top__tel-info">Звонок по России бесплатный</span></a>
+                <a class="header-top__main" href="#">Фарм-Развитие</a>
                 <a class="header-top__socials" href="#">
                     <img src="img/sn_facebook.svg" alt="">
                 </a>
@@ -36,13 +37,69 @@
     <main>
         <section>
             <div class="gallery-top owl-carousel owl-theme">
-                <img src="img/1.jpg" alt="">
-                <img src="img/2.jpg" alt="">
+                <div class="gallery-top__item">
+                    <img src="img/1.jpg" alt="">
+                </div>
+                <div class="gallery-top__item">
+                    <img src="img/2.jpg" alt="">
+                </div>
             </div>
+        </section>
+        <section class="main-about">
+            <div class="wrapper-content">
+                <h1 class="main-header">Фарм-Развитие - мы регистрируем препараты для вас</h1>
+                <p class="subheader">Мы - команда профессионалов, состоящая из высококвалифицированных специалистов, которые имеют большой научный и производственный опыт по разработке, производству и регистрации лекарственных средств, ветеринарных препаратов, биологически активных добавок (БАД), а также  внедрению систем качества на фармацевтических производствах.</p>
+            </div>
+        </section>
+        <section class="catalog">
+
         </section>
     </main>
     <footer>
-
+        <div class="wrapper-content flex">
+            <div class="footer-item">
+                <p class="footer-item__header">Навигация</p>
+                <ul>
+                    <li>
+                        <a class="footer-item__text" href="#">Главная</a>
+                    </li>
+                    <li>
+                        <a class="footer-item__text"href="#">О нас</a>
+                    </li>
+                    <li>
+                        <a class="footer-item__text" href="#">Контакты</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-item">
+                <p class="footer-item__header">Контакты</p>
+                <ul>
+                    <li>
+                        <a class="footer-item__text" href="tel:+78002017955">8(800) 201-79-55</a>
+                    </li>
+                    <li>
+                        <a class="footer-item__text" href="tel:+79513777790">8(951) 377-77-90</a>
+                    </li>
+                    <li>
+                        <a class="footer-item__text"href="mailto:">farm-razvitie@yandex.ru</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-item">
+                <p class="footer-item__header">Адрес</p>
+                <ul>
+                    <li>
+                        <a class="footer-item__text" href="#">Главная</a>
+                    </li>
+                    <li>
+                        <a class="footer-item__text"href="#">О нас</a>
+                    </li>
+                    <li>
+                        <a class="footer-item__text" href="#">Контакты</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </footer>
 </body>
 <script src="js/script.js"></script>
