--- a/farm-razvitie/index.html
+++ b/farm-razvitie/index.html
@@ -6,7 +6,8 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="На нашем сайте вы можете зарегистрировать медицинские препараты и газы. Внедряем правила GMP, Лицензии для производства медицинских препаратов и газы."/>
+    <meta name="description"
+        content="На нашем сайте вы можете зарегистрировать медицинские препараты и газы. Внедряем правила GMP, Лицензии для производства медицинских препаратов и газы." />
     <title>Фарм-Развитие - регистрация медицинских препаратов и газов, GMP по всей России</title>
     <link href="fonts/FuturaPT-Light.ttf" rel="stylesheet">
     <link href="fonts/Romul.ttf" rel="stylesheet">
@@ -21,16 +22,39 @@
     <header>
         <div class="wrapper-content">
             <div class="header-top flex jc-between">
-                <a class="header-top__tel" href="tel:+78002017955">8(800) 201-79-55 <br><span class="header-top__tel-info">Звонок по России бесплатный</span></a>
+                <a class="header-top__tel" href="tel:+78002017955">8(800) 201-79-55 <br><span
+                        class="header-top__tel-info">Звонок по России бесплатный</span></a>
                 <a class="header-top__main" href="#">Фарм-Развитие</a>
                 <a class="header-top__socials" href="#">
                     <img src="img/sn_facebook.svg" alt="">
                 </a>
+                <div class="burger-menu">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
             </div>
             <div class="header-bottom flex jc-between">
                 <a href="#">Наши услуги</a>
                 <a href="#">О компании</a>
                 <a href="#">Контакты</a>
+            </div>
+        </div>
+        <div class="overlay">
+            <div class="mobile-menu">
+                <div class="close"></div>
+                <div class="mobile-nav">
+                    <a href="#">Главная</a>
+                    <a href="#">Наши услуги</a>
+                    <a href="#">О компании</a>
+                    <a href="#">Контакты</a>
+                </div>
+                <div class="mobile-bottom">
+                    <a class="mob__socials" href="#">
+                        <img src="img/sn_facebook.svg" alt="">
+                    </a>
+                    <a class="mob__tel" href="tel:+78002017955">8(800) 201-79-55</a>
+                </div>
             </div>
         </div>
     </header>
@@ -48,15 +72,80 @@
         <section class="main-about">
             <div class="wrapper-content">
                 <h1 class="main-header">Фарм-Развитие - мы регистрируем препараты для вас</h1>
-                <p class="subheader">Мы - команда профессионалов, состоящая из высококвалифицированных специалистов, которые имеют большой научный и производственный опыт по разработке, производству и регистрации лекарственных средств, ветеринарных препаратов, биологически активных добавок (БАД), а также  внедрению систем качества на фармацевтических производствах.</p>
+                <p class="subheader">Мы - команда профессионалов, состоящая из высококвалифицированных специалистов,
+                    которые имеют большой научный и производственный опыт по разработке, производству и регистрации
+                    лекарственных средств, ветеринарных препаратов, биологически активных добавок (БАД), а также
+                    внедрению систем качества на фармацевтических производствах.</p>
             </div>
         </section>
         <section class="catalog">
+            <div class="wrapper-content">
+                <h2 class="catalog__header">Наши услуги</h2>
+                <div class="catalog-wrapper">
+                    <div class="catalog-item">
+                        <div class="catalog-item-img"></div>
+                        <p class="catalog-item-header">Регистрация медицинских газов</p>
+                        <ul class="additional-services">
+                            <li>-Регистрация жидкого кислорода</li>
+                            <li>-Регистрация газообразного кислорода</li>
+                            <li>-Регистрация ксенона и других медицинских газов</li>
+                        </ul>
+                        <button class="catalog-button">Узнать подробнее</button>
+                    </div>
+                    <div class="catalog-item">
+                        <div class="catalog-item-img health"></div>
+                        <p class="catalog-item-header">Регистрация лекарств</p>
+                        <ul class="additional-services">
+                            <li>-Регистрация лекарственных средств</li>
+                            <li>-Регистрационное досье</li>
+                            <li>-Внесение изменений в регистрационное досье</li>
+                        </ul>
+                        <button class="catalog-button">Узнать подробнее</button>
+                    </div>
+                    <div class="catalog-item">
+                        <div class="catalog-item-img vet"></div>
+                        <p class="catalog-item-header">Регистрация ветеринарных препаратов</p>
+                        <ul class="additional-services">
+                            <li>-Регистрация ветеринарных препаратов</li>
+                            <li>-Регистрация фармацевтических субстанций для ветеринарии</li>
+                        </ul>
+                        <button class="catalog-button">Узнать подробнее</button>
+                    </div>
+                    <div class="catalog-item">
+                        <div class="catalog-item-img subs"></div>
+                        <p class="catalog-item-header">Регистрация фармацевтических субстанций</p>
+                        <ul class="additional-services">
+                            <li>-Регистрационное досье</li>
+                            <li>-Внесение изменений</li>
+                        </ul>
+                        <button class="catalog-button">Узнать подробнее</button>
+                    </div>
+                    <div class="catalog-item">
+                        <div class="catalog-item-img gmp"></div>
+                        <p class="catalog-item-header">Внедрение правил GMP (лицензия на производство)</p>
+                        <ul class="additional-services">
+                            <li>-Разработка СОП и др. документации</li>
+                            <li>-Разработка промышленного регламента</li>
+                            <li>-Получение лицензии на производство лекарственных средств</li>
+                        </ul>
+                        <button class="catalog-button">Узнать подробнее</button>
+                    </div>
+                    <div class="catalog-item">
+                        <div class="catalog-item-img corm"></div>
+                        <p class="catalog-item-header">Регистрация кормовых добавок</p>
+                        <ul class="additional-services">
+                            <li>-Регистрация кормовых добавок</li>
+                            <li>-Разработка документации</li>
+                        </ul>
+                        <button class="catalog-button">Узнать подробнее</button>
+                    </div>
+                </div>
 
+            </div>
         </section>
     </main>
     <footer>
-        <div class="wrapper-content flex">
+        <div class="wrapper-content">
             <div class="footer-item">
                 <p class="footer-item__header">Навигация</p>
                 <ul>
@@ -64,7 +153,7 @@
                         <a class="footer-item__text" href="#">Главная</a>
                     </li>
                     <li>
-                        <a class="footer-item__text"href="#">О нас</a>
+                        <a class="footer-item__text" href="#">О нас</a>
                     </li>
                     <li>
                         <a class="footer-item__text" href="#">Контакты</a>
@@ -81,7 +170,7 @@
                         <a class="footer-item__text" href="tel:+79513777790">8(951) 377-77-90</a>
                     </li>
                     <li>
-                        <a class="footer-item__text"href="mailto:">farm-razvitie@yandex.ru</a>
+                        <a class="footer-item__text" href="mailto:">farm-razvitie@yandex.ru</a>
                     </li>
                 </ul>
             </div>
@@ -92,7 +181,7 @@
                         <a class="footer-item__text" href="#">Главная</a>
                     </li>
                     <li>
-                        <a class="footer-item__text"href="#">О нас</a>
+                        <a class="footer-item__text" href="#">О нас</a>
                     </li>
                     <li>
                         <a class="footer-item__text" href="#">Контакты</a>
@@ -103,52 +192,6 @@
     </footer>
 </body>
 <script src="js/script.js"></script>
-<!-- <script>
-    $(document).ready(function () {
-        // Configure/customize these variables.
-        var showChar = 100;  // How many characters are shown by default
-        var moretext = "...more";
-        var lesstext = "...less";
 
-
-        $('.player-info').each(function () {
-            var content = $(this).html();
-
-            if (content.length > showChar) {
-
-                var c = content.substr(0, showChar);
-                var h = content.substr(showChar, content.length - showChar);
-
-                var html = c + '<span class="moreellipses">' + '&nbsp;</span><span class="morecontent"><span>' + h + '</span>&nbsp;&nbsp;<a href="" class="morelink">' + moretext + '</a></span>';
-
-                $(this).html(html);
-            }
-
-        });
-
-        $(".morelink").click(function () {
-            if ($(this).hasClass("less")) {
-                $(this).removeClass("less");
-                $(this).html(moretext);
-            } else {
-                $(this).addClass("less");
-                $(this).html(lesstext);
-            }
-            $(this).parent().prev().toggle();
-            $(this).prev().toggle();
-            return false;
-        });
-    });
-
-    $('.burger-menu').click(function () {
-        $('.universal-overlay').show();
-        $('body').addClass('no-scroll')
-    });
-
-    $('.close').click(function () {
-        $('.universal-overlay').hide();
-        $('body').removeClass('no-scroll')
-    });
-</script> -->
 
 </html>
