--- a/farm-razvitie/index.html
+++ b/farm-razvitie/index.html
@@ -9,6 +9,7 @@
     <meta name="description"
         content="На нашем сайте вы можете зарегистрировать медицинские препараты и газы. Внедряем правила GMP, Лицензии для производства медицинских препаратов и газы." />
     <title>Фарм-Развитие - регистрация медицинских препаратов и газов, GMP по всей России</title>
+    <link rel="shortcut icon" href="img/favicon.ico"/>
     <link href="fonts/FuturaPT-Light.ttf" rel="stylesheet">
     <link href="fonts/Romul.ttf" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/owl.theme.default.min.css" />
@@ -24,7 +25,7 @@
             <div class="header-top flex jc-between">
                 <a class="header-top__tel" href="tel:+78002017955">8(800) 201-79-55 <br><span
                         class="header-top__tel-info">Звонок по России бесплатный</span></a>
-                <a class="header-top__main" href="#">Фарм-Развитие</a>
+                <a class="header-top__main" href="/">Фарм-Развитие</a>
                 <a class="header-top__socials" href="#">
                     <img src="img/sn_facebook.svg" alt="">
                 </a>
@@ -36,7 +37,7 @@
             </div>
             <div class="header-bottom flex jc-between">
                 <a href="#">Наши услуги</a>
-                <a href="#">О компании</a>
+                <a href="/about.html">О компании</a>
                 <a href="#">Контакты</a>
             </div>
         </div>
