--- a/farm-razvitie/index.html
+++ b/farm-razvitie/index.html
@@ -47,7 +47,7 @@
                 <div class="mobile-nav">
                     <a href="#">Главная</a>
                     <a href="#">Наши услуги</a>
-                    <a href="#">О компании</a>
+                    <a href="../about.html">О компании</a>
                     <a href="#">Контакты</a>
                 </div>
                 <div class="mobile-bottom">
