--- a/farm-razvitie/pages/about.html
+++ b/farm-razvitie/pages/about.html
@@ -9,14 +9,14 @@
     <meta name="description"
         content="На нашем сайте вы можете зарегистрировать медицинские препараты и газы. Внедряем правила GMP, Лицензии для производства медицинских препаратов и газы." />
     <title>Фарм-Развитие - регистрация медицинских препаратов и газов, GMP по всей России</title>
-    <link rel="shortcut icon" href="img/favicon.ico"/>
-    <link href="fonts/FuturaPT-Light.ttf" rel="stylesheet">
-    <link href="fonts/Romul.ttf" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/owl.theme.default.min.css" />
-    <link rel="stylesheet" type="text/css" href="css/owl.carousel.css" />
-    <link rel="stylesheet" href="css/style.css">
-    <script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
-    <script type="text/javascript" src="js/owl.carousel.min.js"></script>
+    <link rel="shortcut icon" href="../img/favicon.ico"/>
+    <link href="../fonts/FuturaPT-Light.ttf" rel="stylesheet">
+    <link href="../fonts/Romul.ttf" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="../css/owl.theme.default.min.css" />
+    <link rel="stylesheet" type="text/css" href="../css/owl.carousel.css" />
+    <link rel="stylesheet" href="../css/style.css">
+    <script type="text/javascript" src="../js/jquery-3.1.0.min.js"></script>
+    <script type="text/javascript" src="../js/owl.carousel.min.js"></script>
 </head>
 
 <body>
@@ -27,7 +27,7 @@
                         class="header-top__tel-info">Звонок по России бесплатный</span></a>
                 <a class="header-top__main" href="/index.html">Фарм-Развитие</a>
                 <a class="header-top__socials" href="https://www.facebook.com/groups/farmrazvitie/about/">
-                    <img src="img/sn_facebook.svg" alt="">
+                    <img src="../img/sn_facebook.svg" alt="">
                 </a>
                 <div class="burger-menu">
                     <div></div>
