--- a/farm-razvitie/index.html
+++ b/farm-razvitie/index.html
@@ -37,7 +37,7 @@
             </div>
             <div class="header-bottom flex jc-between">
                 <a href="#">Наши услуги</a>
-                <a href="/about.html">О компании</a>
+                <a href="pages/about.html">О компании</a>
                 <a href="#">Контакты</a>
             </div>
         </div>
