--- a/farm-razvitie/pages/about.html
+++ b/farm-razvitie/pages/about.html
@@ -45,7 +45,7 @@
             <div class="mobile-menu">
                 <div class="close"></div>
                 <div class="mobile-nav">
-                    <a href="/index.html">Главная</a>
+                    <a href="../index.html">Главная</a>
                     <a href="#">Наши услуги</a>
                     <a class="active" href="/about.html">О компании</a>
                     <a href="#">Контакты</a>
