--- a/farm-razvitie/index.html
+++ b/farm-razvitie/index.html
@@ -26,9 +26,13 @@
                 <a class="header-top__tel" href="tel:+78002017955">8(800) 201-79-55 <br><span
                         class="header-top__tel-info">Звонок по России бесплатный</span></a>
                 <a class="header-top__main" href="/">Фарм-Развитие</a>
+                <div class="flex">
                 <a class="header-top__socials" href="#">
                     <img src="img/sn_facebook.svg" alt="">
                 </a>
+                <a class="header-top__tel" href="tel:+79513777790">8(951) 377-77-90 <br><span
+                    class="header-top__tel-info">Телефон/WhatsApp/Viber</span></a>
+                </div>
                 <div class="burger-menu">
                     <div></div>
                     <div></div>
@@ -38,7 +42,7 @@
             <div class="header-bottom flex jc-between">
                 <a href="#">Наши услуги</a>
                 <a href="pages/about.html">О компании</a>
-                <a href="#">Контакты</a>
+                <a href="pages/contacts.html">Контакты</a>
             </div>
         </div>
         <div class="overlay">
@@ -48,7 +52,7 @@
                     <a href="#">Главная</a>
                     <a href="#">Наши услуги</a>
                     <a href="pages/about.html">О компании</a>
-                    <a href="#">Контакты</a>
+                    <a href="pages/contacts.html">Контакты</a>
                 </div>
                 <div class="mobile-bottom">
                     <a class="mob__socials" href="#">
@@ -151,13 +155,13 @@
                 <p class="footer-item__header">Навигация</p>
                 <ul>
                     <li>
-                        <a class="footer-item__text" href="#">Главная</a>
+                        <a class="footer-item__text" href="/index.html">Главная</a>
                     </li>
                     <li>
-                        <a class="footer-item__text" href="#">О нас</a>
+                        <a class="footer-item__text" href="pages/about.html">О нас</a>
                     </li>
                     <li>
-                        <a class="footer-item__text" href="#">Контакты</a>
+                        <a class="footer-item__text" href="pages/contacts.html">Контакты</a>
                     </li>
                 </ul>
             </div>
@@ -172,20 +176,6 @@
                     </li>
                     <li>
                         <a class="footer-item__text" href="mailto:">farm-razvitie@yandex.ru</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="footer-item">
-                <p class="footer-item__header">Адрес</p>
-                <ul>
-                    <li>
-                        <a class="footer-item__text" href="#">Главная</a>
-                    </li>
-                    <li>
-                        <a class="footer-item__text" href="#">О нас</a>
-                    </li>
-                    <li>
-                        <a class="footer-item__text" href="#">Контакты</a>
                     </li>
                 </ul>
             </div>
