--- a/farm-razvitie/pages/contacts.html
+++ b/farm-razvitie/pages/contacts.html
@@ -25,7 +25,7 @@
             <div class="header-top flex jc-between">
                 <a class="header-top__tel" href="tel:+78002017955">8(800) 201-79-55 <br><span
                         class="header-top__tel-info">Звонок по России бесплатный</span></a>
-                <a class="header-top__main" href="../index.html">Фарм-Развитие</a>
+                <a class="header-top__main" href="/">Фарм-Развитие</a>
                 <div class="flex">
                 <a class="header-top__socials" href="#">
                     <img src="../img/sn_facebook.svg" alt="">
@@ -65,37 +65,12 @@
     </header>
     <main>
         <div class="wrapper-content">
-            <div class="about-company">
-                <div class="about-text">
-                    <h1 class="about-header">О компании</h1>
-                    <p>Компания ООО "ФАРМ-РАЗВИТИЕ", была основана в 2012 г. Специалисты нашей компании имеют большой опыт работы (более 10 лет) на производстве лекарственных средств (в том числе фармацевтических субстанций и мед. газов), ветеринарных препаратов, кормовых добавок.</p>
-                    <p>Наша организация имеет представителя в г. Москва, мы сопровождаем все процессы, связанные с получением лицензии на производство, заключения о соответствии требованиям правил GMP, регистрационных удостоверений и т.д.</p>           
-                </div>
-                <div class="about-img"></div>
-            </div>
-                
-                <div class="about-company">
-                <div class="about-img two"></div>
-                <div class="about-text">
-                    <p>Основными видами деятельности нашей компании являются:</p>
-                    <ul class="services-list">
-                        <li>регистрация лекарственных средств (в том числе кислород газообразный медицинский, ксенон медицинский и т.п.);</li>
-                        <li>регистрация фармацевтических субстанций (в том числе кислород жидкий медицинский);</li>
-                        <li>регистрация иммунобиологических препаратов (МИБП);</li>
-                        <li>регистрация галеновых препаратов (настоек и сиропов из растительного сырья);</li>
-                        <li>регистрация ветеринарных препаратов и субстанций для производства ветеринарных препаратов;</li>
-                        <li>регистрация кормовых добавок;</li>
-                        <li>регистрация премиксов;</li>
-                        <li>внедрение правил GMP на фармацевтических, ветеринарных и парфюмерно-косметических предприятиях (включая разработку документации);</li>
-                        <li>получение лицензии на производство лекарственных средств;</li>
-                        <li>получение лицензии на производство ветеринарных препаратов;</li>
-                        <li>получение заключения на соответствие производства требованиям правил GMP;</li>
-                        <li>разработка различной документации для предприятия (промышленные регламенты, стандартные операционные процедуры (СОП), технологические инструкции, стандарты организации (СТО), НД - нормативная документация (ранее называлось ФСП), основное досье производственной площадки, валидационный мастер план и др.).</li>
-                        <li>организация доклинических исследований лекарственных средств для медицинского или ветеринарного применения;</li>
-                        <li>организация клинических исследований лекарственных средств для медицинского или ветеринарного применения;</li>
-                    </ul>
-                </div>
-            </div>
+            <h1 class="about-header">Наши контакты</h1>
+            <p>ООО "ФАРМ-РАЗВИТИЕ"</p>
+            <p>ИНН 5445013758 / КПП 230101001</p>
+            <p>ОГРН 1125483002589 от 22 июня 2012 г.</p>
+            <p></p>
+            <p></p>
         </div>
     </main>
     <footer>
