--- a/farm-razvitie/pages/services.html
+++ b/farm-razvitie/pages/services.html
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div class="header-bottom flex jc-between">
-                <a href="#">Наши услуги</a>
+                <a href="pages/services.html">Наши услуги</a>
                 <a href="pages/about.html">О компании</a>
                 <a href="pages/contacts.html">Контакты</a>
             </div>
@@ -64,16 +64,71 @@
         </div>
     </header>
     <main>
-        <div class="wrapper-content">
-            <h1 class="about-header">Наши контакты</h1>
-            <p>ООО "ФАРМ-РАЗВИТИЕ"</p>
-            <p>ИНН 5445013758 / КПП 230101001</p>
-            <p>ОГРН 1125483002589 от 22 июня 2012 г.</p>
-            <p>Телефон: 8-800-201-79-55 Звонок по России бесплатный</p>
-            <p>Телефон/WhatsApp/Viber: 8 (951) 377-77-90</p>
-            <p>e.mail: farm-razvitie@yandex.ru</p>
-            <p>Мы работаем по всей территории России.</p>
-        </div>
+        <section class="catalog">
+            <div class="wrapper-content">
+                <h2 class="catalog__header">Наши услуги</h2>
+                <div class="catalog-wrapper">
+                    <div class="catalog-item">
+                        <div class="catalog-item-img"></div>
+                        <p class="catalog-item-header">Регистрация медицинских газов</p>
+                        <ul class="additional-services">
+                            <li>-Регистрация жидкого кислорода</li>
+                            <li>-Регистрация газообразного кислорода</li>
+                            <li>-Регистрация ксенона и других медицинских газов</li>
+                        </ul>
+                        <button class="catalog-button">Узнать подробнее</button>
+                    </div>
+                    <div class="catalog-item">
+                        <div class="catalog-item-img health"></div>
+                        <p class="catalog-item-header">Регистрация лекарств</p>
+                        <ul class="additional-services">
+                            <li>-Регистрация лекарственных средств</li>
+                            <li>-Регистрационное досье</li>
+                            <li>-Внесение изменений в регистрационное досье</li>
+                        </ul>
+                        <button class="catalog-button">Узнать подробнее</button>
+                    </div>
+                    <div class="catalog-item">
+                        <div class="catalog-item-img vet"></div>
+                        <p class="catalog-item-header">Регистрация ветеринарных препаратов</p>
+                        <ul class="additional-services">
+                            <li>-Регистрация ветеринарных препаратов</li>
+                            <li>-Регистрация фармацевтических субстанций для ветеринарии</li>
+                        </ul>
+                        <button class="catalog-button">Узнать подробнее</button>
+                    </div>
+                    <div class="catalog-item">
+                        <div class="catalog-item-img subs"></div>
+                        <p class="catalog-item-header">Регистрация фармацевтических субстанций</p>
+                        <ul class="additional-services">
+                            <li>-Регистрационное досье</li>
+                            <li>-Внесение изменений</li>
+                        </ul>
+                        <button class="catalog-button">Узнать подробнее</button>
+                    </div>
+                    <div class="catalog-item">
+                        <div class="catalog-item-img gmp"></div>
+                        <p class="catalog-item-header">Внедрение правил GMP (лицензия на производство)</p>
+                        <ul class="additional-services">
+                            <li>-Разработка СОП и др. документации</li>
+                            <li>-Разработка промышленного регламента</li>
+                            <li>-Получение лицензии на производство лекарственных средств</li>
+                        </ul>
+                        <button class="catalog-button">Узнать подробнее</button>
+                    </div>
+                    <div class="catalog-item">
+                        <div class="catalog-item-img corm"></div>
+                        <p class="catalog-item-header">Регистрация кормовых добавок</p>
+                        <ul class="additional-services">
+                            <li>-Регистрация кормовых добавок</li>
+                            <li>-Разработка документации</li>
+                        </ul>
+                        <button class="catalog-button">Узнать подробнее</button>
+                    </div>
+                </div>
+
+            </div>
+        </section>
     </main>
     <footer>
         <div class="wrapper-content">
