--- a/farm-razvitie/index.html
+++ b/farm-razvitie/index.html
@@ -27,7 +27,7 @@
                         class="header-top__tel-info">Звонок по России бесплатный</span></a>
                 <a class="header-top__main" href="/">Фарм-Развитие</a>
                 <div class="flex">
-                <a class="header-top__socials" href="#">
+                <a class="header-top__socials" target="_blank" href="https://www.facebook.com/groups/farmrazvitie/about/">
                     <img src="img/sn_facebook.svg" alt="">
                 </a>
                 <a class="header-top__tel" href="tel:+79513777790">8(951) 377-77-90 <br><span
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div class="header-bottom flex jc-between">
-                <a href="#">Наши услуги</a>
+                <a href="pages/services.html">Наши услуги</a>
                 <a href="pages/about.html">О компании</a>
                 <a href="pages/contacts.html">Контакты</a>
             </div>
@@ -49,13 +49,13 @@
             <div class="mobile-menu">
                 <div class="close"></div>
                 <div class="mobile-nav">
-                    <a href="#">Главная</a>
-                    <a href="#">Наши услуги</a>
+                    <a href="/index.html">Главная</a>
+                    <a href="pages/services.html">Наши услуги</a>
                     <a href="pages/about.html">О компании</a>
                     <a href="pages/contacts.html">Контакты</a>
                 </div>
                 <div class="mobile-bottom">
-                    <a class="mob__socials" href="#">
+                    <a class="mob__socials" target="_blank" href="https://www.facebook.com/groups/farmrazvitie/about/">
                         <img src="img/sn_facebook.svg" alt="">
                     </a>
                     <a class="mob__tel" href="tel:+78002017955">8(800) 201-79-55</a>
