--- a/farm-razvitie/pages/services.html
+++ b/farm-razvitie/pages/services.html
@@ -68,7 +68,7 @@
             <div class="wrapper-content">
                 <h2 class="catalog__header">Наши услуги</h2>
                 <div class="catalog-wrapper">
-                    <div class="catalog-item">
+                    <a href="pages/reggaz.html" class="catalog-item">
                         <div class="catalog-item-img"></div>
                         <p class="catalog-item-header">Регистрация медицинских газов</p>
                         <ul class="additional-services">
@@ -77,8 +77,8 @@
                             <li>-Регистрация ксенона и других медицинских газов</li>
                         </ul>
                         <button class="catalog-button">Узнать подробнее</button>
-                    </div>
-                    <div class="catalog-item">
+                    </a>
+                    <a href="pages/reglec.html" class="catalog-item">
                         <div class="catalog-item-img health"></div>
                         <p class="catalog-item-header">Регистрация лекарств</p>
                         <ul class="additional-services">
@@ -87,8 +87,8 @@
                             <li>-Внесение изменений в регистрационное досье</li>
                         </ul>
                         <button class="catalog-button">Узнать подробнее</button>
-                    </div>
-                    <div class="catalog-item">
+                    </a>
+                    <a href="pages/regvet.html" class="catalog-item">
                         <div class="catalog-item-img vet"></div>
                         <p class="catalog-item-header">Регистрация ветеринарных препаратов</p>
                         <ul class="additional-services">
@@ -96,8 +96,8 @@
                             <li>-Регистрация фармацевтических субстанций для ветеринарии</li>
                         </ul>
                         <button class="catalog-button">Узнать подробнее</button>
-                    </div>
-                    <div class="catalog-item">
+                    </a>
+                    <a href="pages/regsubs.html" class="catalog-item">
                         <div class="catalog-item-img subs"></div>
                         <p class="catalog-item-header">Регистрация фармацевтических субстанций</p>
                         <ul class="additional-services">
@@ -105,8 +105,8 @@
                             <li>-Внесение изменений</li>
                         </ul>
                         <button class="catalog-button">Узнать подробнее</button>
-                    </div>
-                    <div class="catalog-item">
+                    </a>
+                    <a href="pages/gmp.html" class="catalog-item">
                         <div class="catalog-item-img gmp"></div>
                         <p class="catalog-item-header">Внедрение правил GMP (лицензия на производство)</p>
                         <ul class="additional-services">
@@ -115,8 +115,8 @@
                             <li>-Получение лицензии на производство лекарственных средств</li>
                         </ul>
                         <button class="catalog-button">Узнать подробнее</button>
-                    </div>
-                    <div class="catalog-item">
+                    </a>
+                    <a href="pages/regcorm.html" class="catalog-item">
                         <div class="catalog-item-img corm"></div>
                         <p class="catalog-item-header">Регистрация кормовых добавок</p>
                         <ul class="additional-services">
@@ -124,7 +124,7 @@
                             <li>-Разработка документации</li>
                         </ul>
                         <button class="catalog-button">Узнать подробнее</button>
-                    </div>
+                    </a>
                 </div>
 
             </div>
