--- a/farm-razvitie/pages/contacts.html
+++ b/farm-razvitie/pages/contacts.html
@@ -40,9 +40,9 @@
                 </div>
             </div>
             <div class="header-bottom flex jc-between">
-                <a href="#">Наши услуги</a>
-                <a href="pages/about.html">О компании</a>
-                <a href="pages/contacts.html">Контакты</a>
+                <a href="services.html">Наши услуги</a>
+                <a href="about.html">О компании</a>
+                <a href="contacts.html">Контакты</a>
             </div>
         </div>
         <div class="overlay">
