--- a/farm-razvitie/pages/about.html
+++ b/farm-razvitie/pages/about.html
@@ -40,9 +40,9 @@
                 </div>
             </div>
             <div class="header-bottom flex jc-between">
-                <a href="pages/services.html">Наши услуги</a>
-                <a href="pages/about.html">О компании</a>
-                <a href="pages/contacts.html">Контакты</a>
+                <a href="services.html">Наши услуги</a>
+                <a href="about.html">О компании</a>
+                <a href="contacts.html">Контакты</a>
             </div>
         </div>
         <div class="overlay">
@@ -50,9 +50,9 @@
                 <div class="close"></div>
                 <div class="mobile-nav">
                     <a href="../index.html">Главная</a>
-                    <a href="pages/services.html">Наши услуги</a>
-                    <a href="pages/about.html">О компании</a>
-                    <a href="pages/contacts.html">Контакты</a>
+                    <a href="services.html">Наши услуги</a>
+                    <a href="about.html">О компании</a>
+                    <a href="contacts.html">Контакты</a>
                 </div>
                 <div class="mobile-bottom">
                     <a class="mob__socials" target="_blank" href="https://www.facebook.com/groups/farmrazvitie/about/">
@@ -107,10 +107,10 @@
                         <a class="footer-item__text" href="../index.html">Главная</a>
                     </li>
                     <li>
-                        <a class="footer-item__text" href="pages/about.html">О нас</a>
+                        <a class="footer-item__text" href="about.html">О нас</a>
                     </li>
                     <li>
-                        <a class="footer-item__text" href="pages/contacts.html">Контакты</a>
+                        <a class="footer-item__text" href="contacts.html">Контакты</a>
                     </li>
                 </ul>
             </div>
