--- a/farm-razvitie/pages/services.html
+++ b/farm-razvitie/pages/services.html
@@ -40,9 +40,9 @@
                 </div>
             </div>
             <div class="header-bottom flex jc-between">
-                <a href="pages/services.html">Наши услуги</a>
-                <a href="pages/about.html">О компании</a>
-                <a href="pages/contacts.html">Контакты</a>
+                <a href="services.html">Наши услуги</a>
+                <a href="about.html">О компании</a>
+                <a href="contacts.html">Контакты</a>
             </div>
         </div>
         <div class="overlay">
@@ -50,9 +50,9 @@
                 <div class="close"></div>
                 <div class="mobile-nav">
                     <a href="../index.html">Главная</a>
-                    <a href="pages/services.html">Наши услуги</a>
-                    <a href="pages/about.html">О компании</a>
-                    <a href="pages/contacts.html">Контакты</a>
+                    <a href="services.html">Наши услуги</a>
+                    <a href="about.html">О компании</a>
+                    <a href="contacts.html">Контакты</a>
                 </div>
                 <div class="mobile-bottom">
                     <a class="mob__socials" target="_blank" href="https://www.facebook.com/groups/farmrazvitie/about/">
@@ -68,7 +68,7 @@
             <div class="wrapper-content">
                 <h2 class="catalog__header">Наши услуги</h2>
                 <div class="catalog-wrapper">
-                    <a href="pages/reggaz.html" class="catalog-item">
+                    <a href="reggaz.html" class="catalog-item">
                         <div class="catalog-item-img"></div>
                         <p class="catalog-item-header">Регистрация медицинских газов</p>
                         <ul class="additional-services">
@@ -78,7 +78,7 @@
                         </ul>
                         <button class="catalog-button">Узнать подробнее</button>
                     </a>
-                    <a href="pages/reglec.html" class="catalog-item">
+                    <a href="reglec.html" class="catalog-item">
                         <div class="catalog-item-img health"></div>
                         <p class="catalog-item-header">Регистрация лекарств</p>
                         <ul class="additional-services">
@@ -88,7 +88,7 @@
                         </ul>
                         <button class="catalog-button">Узнать подробнее</button>
                     </a>
-                    <a href="pages/regvet.html" class="catalog-item">
+                    <a href="regvet.html" class="catalog-item">
                         <div class="catalog-item-img vet"></div>
                         <p class="catalog-item-header">Регистрация ветеринарных препаратов</p>
                         <ul class="additional-services">
@@ -97,7 +97,7 @@
                         </ul>
                         <button class="catalog-button">Узнать подробнее</button>
                     </a>
-                    <a href="pages/regsubs.html" class="catalog-item">
+                    <a href="regsubs.html" class="catalog-item">
                         <div class="catalog-item-img subs"></div>
                         <p class="catalog-item-header">Регистрация фармацевтических субстанций</p>
                         <ul class="additional-services">
@@ -106,7 +106,7 @@
                         </ul>
                         <button class="catalog-button">Узнать подробнее</button>
                     </a>
-                    <a href="pages/gmp.html" class="catalog-item">
+                    <a href="gmp.html" class="catalog-item">
                         <div class="catalog-item-img gmp"></div>
                         <p class="catalog-item-header">Внедрение правил GMP (лицензия на производство)</p>
                         <ul class="additional-services">
@@ -116,7 +116,7 @@
                         </ul>
                         <button class="catalog-button">Узнать подробнее</button>
                     </a>
-                    <a href="pages/regcorm.html" class="catalog-item">
+                    <a href="regcorm.html" class="catalog-item">
                         <div class="catalog-item-img corm"></div>
                         <p class="catalog-item-header">Регистрация кормовых добавок</p>
                         <ul class="additional-services">
@@ -126,7 +126,6 @@
                         <button class="catalog-button">Узнать подробнее</button>
                     </a>
                 </div>
-
             </div>
         </section>
     </main>
